web-infras/parser/tests/fixtures/babel/es2015/yield/in-plain-function/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,22)
1|(function () { yield 10 })
 |                    ^
